change the email to unrequired

--- a/templates/jobs_formm.html
+++ b/templates/jobs_formm.html
@@ -41,7 +41,7 @@
             </div>
             
             <input type="text" name="phone" placeholder="رقم الهاتف" required>
-            <input type="email" name="email" placeholder="البريد الإلكتروني" required>
+            <input type="email" name="email" placeholder=" (اختياري) البريد الإلكتروني" >
             <button type="button" class="btn next">التالي</button>
         </div>
 
